--- a/clase1.html
+++ b/clase1.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <script src="clase25.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="clase28.js"></script>
 </body>
 
 </html>
