--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             }
 
             inicializar() {
+                this.elegirColor = this.elegirColor.bind(this)
                 btnEmpezar.classList.add('hide')
                 this.nivel = 7
                 this.colores = {
@@ -125,7 +126,7 @@
 
             siguienteNivel() {
                 this.iluminarSecuencia()
-                this.agregarEventoClick()
+                this.agregarEventosClick()
             }
 
             transformarNumeroAColor(numero) {
@@ -161,7 +162,7 @@
                 this.colores[color].classList.remove('light')
             }
 
-            agregarEventoClick() {
+            agregarEventosClick() {
                 this.colores.celeste.addEventListener('click', this.elegirColor)
                 this.colores.verde.addEventListener('click', this.elegirColor)
                 this.colores.violeta.addEventListener('click', this.elegirColor)
@@ -169,7 +170,7 @@
             }
 
             elegirColor(ev) {
-                console.log(ev)
+                console.log(this)
             }
         }
 
