--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 <body>
     <div class="gameboard">
         <div id="celeste" class="color celeste left" data-color="celeste"></div>
+        <!-- data-color, esto se mapea al dataset, ej: dataset = color: "celeste", al tener un atributo en HTML con la palabra data seguida de un guion, lo que siga al guion sera añadio al dataSet como indice y su valor sera ahora el valor de ese indice en el DOM -->
         <div id="violeta" class="color violeta right" data-color="violeta"></div>
         <div id="naranja" class="color naranja left" data-color="naranja"></div>
         <div id="verde" class="color verde right" data-color="verde"></div>
@@ -100,18 +101,20 @@
         const naranja = document.getElementById('naranja')
         const verde = document.getElementById('verde')
         const btnEmpezar = document.getElementById('btnEmpezar')
+        const ULTIMO_NIVEL = 10
 
         class Juego {
             constructor() {
                 this.inicializar()
                 this.generarSecuencia()
-                this.siguienteNivel()
+                setTimeout(this.siguienteNivel, 500);
             }
 
             inicializar() {
                 this.elegirColor = this.elegirColor.bind(this)
+                this.siguienteNivel = this.siguienteNivel.bind(this)
                 btnEmpezar.classList.add('hide')
-                this.nivel = 7
+                this.nivel = 1
                 this.colores = {
                     celeste,
                     violeta,
@@ -121,10 +124,11 @@
             }
 
             generarSecuencia() {
-                this.secuencia = new Array(10).fill(0).map(n => Math.floor(Math.random() * 4))
+                this.secuencia = new Array(ULTIMO_NIVEL).fill(0).map(n => Math.floor(Math.random() * 4))
             }
 
             siguienteNivel() {
+                this.subnivel = 0 //al usar this en los metoos del objeto, se da e alta automaticamente el atributo en el objeto, no es necesario añadirlo antes, se pueen agregar atributos al objeto en cualrquier parte de este
                 this.iluminarSecuencia()
                 this.agregarEventosClick()
             }
@@ -142,6 +146,23 @@
                         break;
                     case 3:
                         return 'verde'
+                        break;
+                }
+            }
+
+            transformarColorANumero(numero) {
+                switch (numero) {
+                    case 'celeste':
+                        return 0
+                        break;
+                    case 'violeta':
+                        return 1
+                        break;
+                    case 'naranja':
+                        return 2
+                        break;
+                    case 'verde':
+                        return 3
                         break;
                 }
             }
@@ -169,8 +190,31 @@
                 this.colores.naranja.addEventListener('click', this.elegirColor)
             }
 
+            eliminarEventosClic() {
+                this.colores.celeste.removeEventListener('click', this.elegirColor)
+                this.colores.verde.removeEventListener('click', this.elegirColor)
+                this.colores.violeta.removeEventListener('click', this.elegirColor)
+                this.colores.naranja.removeEventListener('click', this.elegirColor)
+            }
+
             elegirColor(ev) {
-                console.log(this)
+                const nombreColor = ev.target.dataset.color
+                const numeroColor = this.transformarColorANumero(nombreColor)
+                this.iluminarColor(nombreColor)
+                if (numeroColor === this.secuencia[this.subnivel]) {
+                    this.subnivel++
+                        if (this.subnivel === this.nivel) {
+                            this.nivel++
+                                this.eliminarEventosClic()
+                            if (this.nivel === (ULTIMO_NIVEL + 1)) {
+                                //GANO
+                            } else {
+                                setTimeout(this.siguienteNivel, 1500)
+                            }
+                        }
+                } else {
+                    console.log('Has perdido')
+                }
             }
         }
 
@@ -181,25 +225,3 @@
 </body>
 
 </html>
-
-<!--
-        const celeste = document.getElementById('celeste')
-        const violeta = document.getElementById('violeta')
-        const naranja = document.getElementById('naranja')
-        const verde = document.getElementById('verde')
-        const btnEmpezar = document.getElementById('btnEmpezar')
-
-        class Juego {
-            constructor() {
-                this.inicializar()
-            }
-
-            inicializar() {
-                btnEmpezar.classList.add('hide')
-            }
-        }
-
-        function empezarJuego() {
-            var juego = new Juego()
-        }
- -->
